[package]
name = "wlink"
version = "0.0.7"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/wlink"
documentation = "https://docs.rs/wlink"
homepage = "https://github.com/ch32-rs/wlink"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
description = "WCH-Link flash tool for WCH's RISC-V MCUs(CH32V, CH56X, CH57X, CH58X, CH59X, CH32L103, CH32X035, CH641, CH643)"
keywords = ["embedded", "WCH", "CH32V", "WCH-Link"]
readme = "README.md"
license = "MIT/Apache-2.0"

[features]
default = []

[dependencies]
anyhow = "1.0.68"
bitfield = "0.14.0"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
ihex = "3.0.0"
log = "0.4.17"
nu-pretty-hex = "0.86.0"
rusb = "0.9.1"
simplelog = "0.12.0"
thiserror = "1.0.38"
object = { version = "0.32", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }
indicatif = "0.17.7"
serialport = "4.2.2"
