[package]
name = "wlink"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/wlink"
documentation = "https://docs.rs/wlink"
homepage = "https://github.com/ch32-rs/wlink"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
description = "WCH-Link flash tool for WCH's RISC-V MCUs(CH32V, CH56X, CH57X, CH58X, CH59X, CH32L103, CH32X035, CH641, CH643)"
keywords = ["embedded", "WCH", "CH32V", "WCH-Link"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
anyhow = "1"
bitfield = "0.17.0"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
ihex = "3.0.0"
log = "0.4"
nu-pretty-hex = "0.99.1"
rusb = "0.9.1"
simplelog = "0.12.0"
thiserror = "2"
object = { version = "0.36", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }
indicatif = "0.17.7"
serialport = "4.6"
libloading = "0.8"
chrono = "0.4"
clap-verbosity-flag = "2"
