[package]
name = "wlink"
version = "0.1.1"
edition = "2024"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/wlink"
documentation = "https://docs.rs/wlink"
homepage = "https://github.com/ch32-rs/wlink"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
description = "WCH-Link flash tool for WCH's RISC-V MCUs(CH32V, CH56X, CH57X, CH58X, CH59X, CH32L103, CH32X035, CH641, CH643)"
keywords = ["embedded", "WCH", "CH32V", "WCH-Link"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
anyhow = "1"
bitfield = "0.19"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
ihex = "3.0.0"
log = "0.4"
nu-pretty-hex = "0.109"
nusb = "0.2"
simplelog = "0.12.0"
thiserror = "2"
object = { version = "0.38", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }
indicatif = "0.18"
serialport = "4.7"
libloading = "0.9"
chrono = "0.4"
clap-verbosity-flag = "3"
